--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/login_background_image"
-    android:backgroundTint="@color/orange_trans"
+    android:background="@mipmap/mypass_loading"
+    android:backgroundTint="@color/black_trans"
     android:backgroundTintMode="src_over"
     tools:context=".SplashActivity">
 
@@ -19,5 +19,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/mypass_logo_full_white" />
+        app:srcCompat="@mipmap/mypass_white_text" />
 </android.support.constraint.ConstraintLayout>
