--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="cyan">#2bffc6</color>
     <color name="default_color">#172b4d</color>
     <color name="primary">#fb6340</color>
-    <color name="secondary">#f4f5f7</color>
+    <color name="secondary">#F4F5F7</color>
     <color name="success">#2dce89</color>
     <color name="info">#11cdef</color>
     <color name="warning">#fb6340</color>
