--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -6,18 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".view.MainHomeFragment">
 
-    <TextView
-        android:id="@+id/home_test_textview"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/secrets_list"
+        android:name="com.cosmicode.mypass.view.MainHomeFragment"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:text="@string/hello_blank_fragment"
-        android:textAlignment="center"
+        android:layout_height="0dp"
+        app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".view.MainHomeFragment" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
