--- a/app/src/main/res/layout/folder_item.xml
+++ b/app/src/main/res/layout/folder_item.xml
@@ -7,7 +7,7 @@
     android:background="@color/secondary">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/folder_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintEnd_toStartOf="@+id/folder_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/icon_folder_gray" />
