Refactor longin page.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="black_trans">#4E000000</color>
 
     <color name="blue">#5e72e4</color>
-    <color name="indigo">#5603ad</color>
+    <color name="indigo">#5603AD</color>
     <color name="purple">#8965e0</color>
     <color name="pink">#f3a4b5</color>
     <color name="red">#f5365c</color>
