--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/copyright"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="32dp"
+        android:text="@string/copyright"
+        android:textColor="@color/secondary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -53,127 +66,48 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@mipmap/mypass_white_text" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:textColorHint="@color/secondary"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/logo_mypass">
-
-                <AutoCompleteTextView
-                    android:id="@+id/email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/secondary"
-                    android:drawableStart="@drawable/icon_mail_white"
-                    android:drawablePadding="6dp"
-                    android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColor="@color/secondary"
-                    android:textColorHint="@color/secondary" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:textColorHint="@color/secondary"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
-
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/secondary"
-                    android:drawableStart="@drawable/icon_key_white"
-                    android:drawablePadding="6dp"
-                    android:hint="@string/prompt_password"
-                    android:imeActionId="6"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColor="@color/secondary"
-                    android:textColorHint="@color/secondary" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <TextView
-                android:id="@+id/recover_password_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/recover_password"
-                android:textColor="@color/secondary"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button" />
-
-            <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:backgroundTint="@color/secondary"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
-                tools:layout_editor_absoluteX="32dp" />
-
             <View
                 android:id="@+id/divider_left"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="45dp"
                 android:background="@color/secondary"
                 app:layout_constraintEnd_toStartOf="@+id/textView"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/recover_password_button" />
+                app:layout_constraintTop_toBottomOf="@+id/logo_mypass" />
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="24dp"
-                android:text="@string/login_or"
+                android:text="@string/common_signin_button_text"
                 android:textColor="@color/secondary"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/divider_right"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/divider_left"
-                app:layout_constraintTop_toBottomOf="@+id/recover_password_button" />
+                app:layout_constraintTop_toBottomOf="@+id/logo_mypass" />
 
             <View
                 android:id="@+id/divider_right"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="45dp"
                 android:background="@color/secondary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView"
-                app:layout_constraintTop_toBottomOf="@+id/recover_password_button" />
+                app:layout_constraintTop_toBottomOf="@+id/logo_mypass" />
 
             <Button
                 android:id="@+id/email_sign_in_with_facebook_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="45dp"
                 android:layout_marginEnd="8dp"
                 android:backgroundTint="@color/com_facebook_blue"
                 android:drawableStart="@drawable/com_facebook_button_icon_white"
@@ -190,7 +124,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="45dp"
                 android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
                 android:drawableStart="@drawable/googleg_standard_color_18"
                 android:text="@string/action_login_with_google"
@@ -200,20 +134,6 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/email_sign_in_with_facebook_button"
                 app:layout_constraintTop_toBottomOf="@+id/divider_right" />
-
-            <TextView
-                android:id="@+id/email_sign_up_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:layout_marginBottom="16dp"
-                android:text="@string/action_sign_up"
-                android:textColor="@color/secondary"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/email_sign_in_with_google_button" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
