--- a/app/src/main/res/layout/fragment_main_options.xml
+++ b/app/src/main/res/layout/fragment_main_options.xml
@@ -22,8 +22,9 @@
         android:id="@+id/logout_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light"
-        android:backgroundTint="@color/light"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/indigo"
         android:text="@string/logout"
         android:textColor="@color/secondary"
         android:textStyle="bold"
