Error on open site

--- a/app/src/main/res/menu/secret_options.xml
+++ b/app/src/main/res/menu/secret_options.xml
@@ -14,6 +14,10 @@
         android:icon="@drawable/icon_eye_black"
         android:title="@string/show_password" />
     <item
+        android:id="@+id/open_site"
+        android:icon="@drawable/icon_browser_black"
+        android:title="@string/open_site" />
+    <item
         android:id="@+id/edit"
         android:icon="@drawable/icon_edit_black"
         android:title="@string/edit" />
