--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="dialog_margin">16dp</dimen>
+    <dimen name="standard_55">70dp</dimen>
+    <dimen name="standard_105">105dp</dimen>
 </resources>
